Fix spacing for SIG button on beta builds

--- a/src/main/content/_assets/css/downloads.scss
+++ b/src/main/content/_assets/css/downloads.scss
@@ -671,7 +671,9 @@ html, body {
     background-color: #5E6B8D;
 }
 
-.link_runtime_releases:not(:first-child) {
+.link_runtime_releases:not(:first-child),
+.link_runtime_betas:not(:first-child)
+{
     margin-left: 24px;
 }
 
